Fix double scrollbars in tall calendar event
closes LS-2781
flag=none

test plan:
  - create a calendar event with this HTML:
    (I suggest you put it in the first week of the month)
<p>I'm</p>
<p>going</p>
<p>to&nbsp;</p>
<p>make</p>
<p>this</p>
<p>long</p>
<p>so&nbsp;</p>
<p>it&nbsp;</p>
<p>requires</p>
<p>a&nbsp;</p>
<p>scroll</p>
<p>bar</p>
<p>in&nbsp;</p>
<p>the&nbsp;</p>
<p>calendar</p>
<p>Link here:</p>
<p><a class="inline_disabled" href="http://youtube.com" target="_blank" rel="noopener">youtube.com</a></p>

  - click on the event in the calendar
  > expect only 1 vertical scrollbar

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/277830
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Luis Oliveira <luis.oliveira@instructure.com>
Product-Review: Ed Schiebel <eschiebel@instructure.com>

--- a/app/stylesheets/jst/calendar/calendarApp.scss
+++ b/app/stylesheets/jst/calendar/calendarApp.scss
@@ -135,7 +135,6 @@
   max-width: 395px;
   max-height: 495px;
   margin-bottom: 6px;
-  overflow: auto;
 }
 
 #edit_appointment_group_form_holder .scheduler-event-details-footer {
